--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="item_date">#ffA8A8A8</color>
     <color name="item_article_tv">#ff000000</color>
     <color name="item_tag_tv">#ffFFFFFF</color>
+    <color name="color_title_bg">#CCFFFFFF</color>
 
     <color name="White">#FFFFFF</color>
     <color name="Black">#000000</color>
