--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,7 +12,13 @@
     <dimen name="item_tv_title">15sp</dimen>
     <dimen name="item_tv_date">12sp</dimen>
     <dimen name="item_tv_tag">12sp</dimen>
-    <dimen name="item_content_padding">9dp</dimen>
+    <dimen name="item_content_padding">8dp</dimen>
     <dimen name="item_tv_via">12sp</dimen>
+
+    <dimen name="textSize_small_10">10sp</dimen>
+    <dimen name="textSize_small">12sp</dimen>
+    <dimen name="textSize_content">14sp</dimen>
+    <dimen name="textSize_titleSmall">16sp</dimen>
+    <dimen name="textSize_title">18sp</dimen>
 
 </resources>
