--- a/app/src/main/res/layout/item_home_list.xml
+++ b/app/src/main/res/layout/item_home_list.xml
@@ -10,92 +10,79 @@
     app:cardCornerRadius="1dp"
     app:cardElevation="1dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:paddingBottom="@dimen/item_content_padding"
+        android:paddingRight="@dimen/item_content_padding"
+        android:paddingTop="@dimen/item_content_padding">
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/tv_article_author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:text="@string/app_name"
+            android:textSize="@dimen/item_tv_author" />
+
+        <TextView
+            android:id="@+id/tv_article_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="@string/app_name"
+            android:textSize="@dimen/item_tv_date" />
+
+        <ImageView
+            android:id="@+id/iv_article_thumbnail"
+            android:layout_width="@dimen/item_img_width"
+            android:layout_height="@dimen/item_img_height"
+            android:layout_below="@+id/tv_article_author"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_8"
+            android:contentDescription="article thumbnail"
+            android:scaleType="centerCrop" />
+
+        <TextView
+            android:id="@+id/tv_article_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/item_content_padding">
+            android:layout_below="@+id/tv_article_author"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_8"
+            android:layout_toRightOf="@+id/iv_article_thumbnail"
+            android:ellipsize="end"
+            android:gravity="top|start"
+            android:lineSpacingExtra="2dp"
+            android:maxLines="2"
+            android:paddingBottom="@dimen/dp_6"
+            android:textColor="@color/item_title"
+            android:textSize="@dimen/item_tv_title" />
 
-            <ImageView
-                android:id="@+id/iv_article_thumbnail"
-                android:layout_width="120dp"
-                android:layout_height="90dp"
-                android:contentDescription="article thumbnail"
-                android:scaleType="centerCrop" />
-
-            <TextView
-                android:id="@+id/tv_article_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/iv_article_thumbnail"
-                android:layout_marginLeft="9dp"
-                android:layout_marginStart="9dp"
-                android:layout_toRightOf="@+id/iv_article_thumbnail"
-                android:ellipsize="end"
-                android:gravity="top|start"
-                android:lineSpacingExtra="2dp"
-                android:maxLines="2"
-                android:paddingBottom="6dp"
-                android:textColor="@color/item_title"
-                android:textSize="@dimen/item_tv_title" />
-
-            <TextView
-                android:id="@+id/tv_article_author"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_article_title"
-                android:layout_marginTop="2dp"
-                android:layout_toEndOf="@+id/iv_article_thumbnail"
-                android:layout_toRightOf="@+id/iv_article_thumbnail"
-                android:ellipsize="end"
-                android:gravity="right|center_vertical"
-                android:lineSpacingExtra="2dp"
-                android:maxLines="2"
-                android:textColor="@color/item_date"
-                android:textSize="@dimen/item_tv_date"
-                android:textStyle="italic" />
-
-            <TextView
-                android:id="@+id/tv_article_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_below="@id/tv_article_title"
-                android:textColor="@color/item_date"
-                android:textSize="@dimen/item_tv_date" />
-
-            <TextView
-                android:id="@+id/tv_article_chapterName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_below="@+id/tv_article_author"
-                android:layout_marginEnd="5dp"
-                android:layout_marginLeft="9dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginStart="9dp"
-                android:layout_marginTop="9dp"
-                android:layout_toRightOf="@+id/iv_article_thumbnail"
-                android:background="@drawable/bg_tag_one"
-                android:gravity="center"
-                android:text="Android"
-                android:textColor="@color/item_tag_tv"
-                android:textSize="@dimen/item_tv_tag" />
-
-        </RelativeLayout>
+        <TextView
+            android:id="@+id/tv_article_chapterName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/tv_article_title"
+            android:layout_marginEnd="@dimen/dp_10"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginRight="@dimen/dp_10"
+            android:layout_marginStart="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_toRightOf="@+id/iv_article_thumbnail"
+            android:background="@drawable/bg_tag_one"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textColor="@color/item_tag_tv"
+            android:textSize="@dimen/item_tv_tag" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="right"
-            android:orientation="horizontal"
-            android:padding="@dimen/item_content_padding">
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/iv_like"
@@ -108,13 +95,13 @@
                 android:id="@+id/iv_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginStart="@dimen/dp_10"
                 android:contentDescription="share"
                 app:srcCompat="@drawable/ic_share" />
 
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
