--- a/app/src/main/res/layout/item_knowledge_list.xml
+++ b/app/src/main/res/layout/item_knowledge_list.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,21 +10,98 @@
     app:cardCornerRadius="1dp"
     app:cardElevation="1dp">
 
-    <TextView
-        android:id="@+id/title_first"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/item_content_padding"
-        android:textColor="@android:color/primary_text_light"
-        android:textSize="@dimen/textSize_title"
-        tools:text="@string/app_name" />
+        android:paddingBottom="@dimen/item_content_padding"
+        android:paddingRight="@dimen/item_content_padding"
+        android:paddingTop="@dimen/item_content_padding">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="@dimen/dp_24"
-        android:layout_height="@dimen/dp_24"
-        android:layout_gravity="right|center_vertical"
-        android:layout_marginRight="@dimen/dp_10"
-        app:srcCompat="@drawable/ic_arrow_right_black_24dp" />
+        <TextView
+            android:id="@+id/tv_article_author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:text="@string/app_name"
+            android:textSize="@dimen/item_tv_author" />
+
+        <TextView
+            android:id="@+id/tv_article_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="@string/app_name"
+            android:textSize="@dimen/item_tv_date" />
+
+        <ImageView
+            android:id="@+id/iv_article_thumbnail"
+            android:layout_width="@dimen/item_img_width"
+            android:layout_height="@dimen/item_img_height"
+            android:layout_below="@+id/tv_article_author"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_8"
+            android:contentDescription="article thumbnail"
+            android:scaleType="centerCrop" />
+
+        <TextView
+            android:id="@+id/tv_article_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_article_author"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_8"
+            android:layout_toRightOf="@+id/iv_article_thumbnail"
+            android:ellipsize="end"
+            android:gravity="top|start"
+            android:lineSpacingExtra="2dp"
+            android:maxLines="2"
+            android:paddingBottom="@dimen/dp_6"
+            android:textColor="@color/item_title"
+            android:textSize="@dimen/item_tv_title" />
+
+        <TextView
+            android:id="@+id/tv_article_chapterName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/tv_article_title"
+            android:layout_marginEnd="@dimen/dp_10"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginRight="@dimen/dp_10"
+            android:layout_marginStart="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_toRightOf="@+id/iv_article_thumbnail"
+            android:background="@drawable/bg_tag_one"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textColor="@color/item_tag_tv"
+            android:textSize="@dimen/item_tv_tag" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_like"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="like article"
+                app:srcCompat="@drawable/ic_favorite_not" />
+
+            <ImageView
+                android:id="@+id/iv_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginStart="@dimen/dp_10"
+                android:contentDescription="share"
+                app:srcCompat="@drawable/ic_share" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
