--- a/app/src/main/res/layout/item_knowledge_tree_list.xml
+++ b/app/src/main/res/layout/item_knowledge_tree_list.xml
@@ -11,21 +11,49 @@
     app:cardCornerRadius="1dp"
     app:cardElevation="1dp">
 
-    <TextView
-        android:id="@+id/title_first"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/item_content_padding"
-        android:textColor="@android:color/primary_text_light"
-        android:textSize="@dimen/textSize_title"
-        tools:text="@string/app_name" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="@dimen/dp_24"
-        android:layout_height="@dimen/dp_24"
-        android:layout_gravity="right|center_vertical"
-        android:layout_marginRight="@dimen/dp_10"
-        app:srcCompat="@drawable/ic_arrow_right_black_24dp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_margin="@dimen/dp_10"
+            android:layout_toLeftOf="@+id/imageView"
+            android:layout_toStartOf="@+id/imageView"
+            android:gravity="start"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/title_first"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/primary_text_light"
+                android:textSize="@dimen/sp_16"
+                tools:text="@string/app_name" />
+
+            <TextView
+                android:id="@+id/title_second"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10"
+                android:textColor="@android:color/secondary_text_light"
+                tools:text="Android Studio相关   gradle  官方发布" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="@dimen/dp_24"
+            android:layout_height="@dimen/dp_24"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/dp_10"
+            app:srcCompat="@drawable/ic_arrow_right_black_24dp" />
+
+    </RelativeLayout>
+
 
 </android.support.v7.widget.CardView>
