--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
             android:layout_gravity="bottom|right"
             android:layout_marginBottom="@dimen/dp_60"
             android:layout_marginRight="@dimen/dp_20"
-            app:layout_behavior="com.cxz.wanandroid.widget.behavior.ScrollAwareFABBehavior"
+            app:layout_behavior="com.cxz.wanandroid.widget.behavior.ScaleDownShowBehavior"
             app:srcCompat="@drawable/ic_arrow_upward_white_24dp" />
 
     </android.support.design.widget.CoordinatorLayout>
