--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="item_article_tv">#ff000000</color>
     <color name="item_tag_tv">#ffFFFFFF</color>
     <color name="color_title_bg">#CCFFFFFF</color>
+    <color name="comment_line">#dddddd</color>
 
     <color name="White">#FFFFFF</color>
     <color name="Black">#000000</color>
