--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="168dp"
+    android:layout_height="@dimen/dp_168"
     android:background="?attr/colorPrimary"
     android:clickable="true"
     android:foreground="?attr/selectableItemBackground"
