--- a/app/src/main/res/layout/item_knowledge_tree_list.xml
+++ b/app/src/main/res/layout/item_knowledge_tree_list.xml
@@ -8,8 +8,8 @@
     android:clickable="true"
     android:foreground="?attr/selectableItemBackground"
     app:cardBackgroundColor="@color/viewBackground"
-    app:cardCornerRadius="1dp"
-    app:cardElevation="1dp">
+    app:cardCornerRadius="@dimen/dp_1"
+    app:cardElevation="@dimen/dp_1">
 
 
     <RelativeLayout
