--- a/app/src/main/res/layout/container.xml
+++ b/app/src/main/res/layout/container.xml
@@ -5,5 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/viewBackground"
+    android:fitsSystemWindows="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:layout="@layout/fragment_home" />
