--- a/app/src/main/res/layout/fragment_project.xml
+++ b/app/src/main/res/layout/fragment_project.xml
@@ -13,8 +13,9 @@
         android:theme="@style/AppTheme.AppBarOverlay"
         app:tabGravity="center"
         app:tabIndicatorColor="@color/white"
-        app:tabIndicatorHeight="@dimen/dp_4"
-        app:tabMode="scrollable" />
+        app:tabIndicatorHeight="@dimen/dp_2"
+        app:tabMode="scrollable"
+        app:tabTextAppearance="@style/TabTextStyle" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
