--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,7 +4,7 @@
     android:id="@+id/app_bar_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:fitsSystemWindows="false"
+    android:fitsSystemWindows="true"
     android:theme="@style/AppTheme.AppBarOverlay"
     app:elevation="0dp">
 
