--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="AppTheme" parent="BaseAppTheme">
+    <style name="AppTheme" parent="BaseAppTheme.NoActionBar">
     </style>
 
 </resources>
