--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -39,9 +39,13 @@
     <dimen name="dp_24">24dp</dimen>
     <dimen name="dp_50">50dp</dimen>
     <dimen name="dp_60">60dp</dimen>
+    <dimen name="dp_80">80dp</dimen>
     <dimen name="dp_110">110dp</dimen>
     <dimen name="dp_168">168dp</dimen>
     <dimen name="dp_180">180dp</dimen>
     <dimen name="dp_230">230dp</dimen>
+
+    <!-- sp -->
+    <dimen name="sp_24">24sp</dimen>
 
 </resources>
