--- a/app/src/main/res/layout/item_project_list.xml
+++ b/app/src/main/res/layout/item_project_list.xml
@@ -48,7 +48,7 @@
                 android:layout_below="@id/item_project_list_title_tv"
                 android:layout_marginTop="@dimen/dp_10"
                 android:ellipsize="end"
-                android:maxLines="4"
+                android:maxLines="3"
                 android:text="@string/app_name"
                 android:textColor="@color/item_desc"
                 android:textSize="@dimen/item_tv_content" />
@@ -59,22 +59,31 @@
                 android:layout_below="@id/item_project_list_content_tv">
 
                 <TextView
-                    android:id="@+id/item_project_list_time_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:gravity="center"
-                    android:textColor="@color/item_date"
-                    android:textSize="@dimen/item_tv_date" />
-
-                <TextView
                     android:id="@+id/item_project_list_author_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:gravity="center"
+                    android:layout_alignBaseline="@+id/item_project_list_time_tv"
+                    android:text="@string/app_name"
                     android:textSize="@dimen/item_tv_author" />
+
+                <TextView
+                    android:id="@+id/item_project_list_time_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/item_project_list_like_iv"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginBottom="@dimen/dp_8"
+                    android:text="@string/app_name"
+                    android:textColor="@color/item_date"
+                    android:textSize="@dimen/item_tv_date" />
+
+                <ImageView
+                    android:id="@+id/item_project_list_like_iv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    app:srcCompat="@drawable/ic_like_not" />
 
             </RelativeLayout>
         </RelativeLayout>
