--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="color_title_bg">#CCFFFFFF</color>
     <color name="comment_line">#dddddd</color>
     <color name="transparent_75">#ba000000</color>
+    <color name="comment_text">#5b5d5c</color>
 
     <color name="White">#FFFFFF</color>
     <color name="Black">#000000</color>
