--- a/app/src/main/res/values/notranslate.xml
+++ b/app/src/main/res/values/notranslate.xml
@@ -13,4 +13,8 @@
         <h2>源码位置</h2>
         <p>\t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击<a href="https://github.com/bjchenxz/WanAndroid" target="_blank">GitHub</a>，在上面发起<b>issue</b>或者提交<b>pull request</b>。</p>
     ]]></string>
+
+
+        <string name="copyright_content">本APP所使用的所有API均由 玩Android 网站提供，仅供学习交流，不可用于任何商业用途。</string>
+
 </resources>
