--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -9,6 +9,11 @@
             android:title="@string/nav_my_collect" />
 
         <item
+            android:id="@+id/nav_night_mode"
+            android:icon="@drawable/ic_night_white_24dp"
+            android:title="@string/nav_night_mode" />
+
+        <item
             android:id="@+id/nav_setting"
             android:icon="@drawable/ic_setting_white_24dp"
             android:title="@string/nav_setting" />
