--- a/app/src/main/res/drawable/item_flow_selector.xml
+++ b/app/src/main/res/drawable/item_flow_selector.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/Grey200" android:state_pressed="true" />
+    <item android:drawable="@color/item_flow_layout_bg" android:state_pressed="true" />
 
-    <item android:drawable="@color/Grey200" android:state_focused="true" />
+    <item android:drawable="@color/item_flow_layout_bg" android:state_focused="true" />
 
     <item android:drawable="@android:color/transparent" />
 
