--- a/app/src/main/res/layout/activity_common.xml
+++ b/app/src/main/res/layout/activity_common.xml
@@ -4,6 +4,7 @@
     android:id="@+id/common_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/viewBackground"
     android:orientation="vertical">
 
     <include layout="@layout/toolbar" />
