--- a/app/src/main/res/layout/activity_knowledge.xml
+++ b/app/src/main/res/layout/activity_knowledge.xml
@@ -2,7 +2,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/viewBackground">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
