--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -25,7 +25,7 @@
             android:gravity="center"
             android:text="@string/app_name"
             android:textAllCaps="false"
-            android:textColor="@color/comment_text"
+            android:textColor="@color/color_about_tv"
             android:textSize="@dimen/sp_16" />
 
         <TextView
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/dp_16"
-            android:textColor="@color/comment_text"
+            android:textColor="@color/color_about_tv"
             tools:text="@string/about_content" />
 
     </LinearLayout>
