--- a/app/src/main/res/layout/fragment_home_empty.xml
+++ b/app/src/main/res/layout/fragment_home_empty.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/no_data" />
+        android:text="@string/no_data"
+        android:textColor="@color/common_color" />
 
 </LinearLayout>
