--- a/app/src/main/res/layout/item_knowledge_tree_list.xml
+++ b/app/src/main/res/layout/item_knowledge_tree_list.xml
@@ -11,7 +11,6 @@
     app:cardCornerRadius="@dimen/dp_1"
     app:cardElevation="@dimen/dp_1">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -31,7 +30,7 @@
                 android:id="@+id/title_first"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/item_title"
                 android:textSize="@dimen/sp_16"
                 tools:text="@string/app_name" />
 
@@ -40,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_10"
-                android:textColor="@android:color/secondary_text_light"
+                android:textColor="@color/item_desc"
                 tools:text="Android Studio相关   gradle  官方发布" />
         </LinearLayout>
 
