--- a/app/src/main/res/layout/item_project_list.xml
+++ b/app/src/main/res/layout/item_project_list.xml
@@ -64,6 +64,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignBaseline="@+id/item_project_list_time_tv"
                     android:text="@string/app_name"
+                    android:textColor="@color/item_author"
                     android:textSize="@dimen/item_tv_author" />
 
                 <TextView
