--- a/app/src/main/res/layout/fragment_refresh_layout.xml
+++ b/app/src/main/res/layout/fragment_refresh_layout.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/viewBackground">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
