update search history

--- a/app/src/main/res/layout/toolbar_search.xml
+++ b/app/src/main/res/layout/toolbar_search.xml
@@ -5,63 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fitsSystemWindows="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:theme="@style/AppTheme.AppBarOverlay"
     app:elevation="0dp">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/search_toolbar"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/viewBackground"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        app:layout_scrollFlags="scroll|enterAlways">
+        app:layout_scrollFlags="scroll|enterAlways"
+        app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        <!--<ImageButton-->
-            <!--android:id="@+id/search_back_ib"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginEnd="@dimen/dp_12"-->
-            <!--android:layout_marginRight="@dimen/dp_12"-->
-            <!--android:background="@android:color/transparent"-->
-            <!--android:contentDescription="@null"-->
-            <!--android:src="@drawable/selector_back_arrow_bg" />-->
-
-        <TextView
-            android:id="@+id/search_tv"
-            android:layout_width="@dimen/dp_54"
-            android:layout_height="@dimen/dp_28"
-            android:layout_gravity="end"
-            android:layout_marginEnd="@dimen/dp_12"
-            android:layout_marginRight="@dimen/dp_12"
-            android:background="@drawable/search_bg"
-            android:contentDescription="@null"
-            android:gravity="center"
-            android:text="@string/action_search"
-            android:textColor="@color/white"
-            android:textSize="@dimen/sp_12" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/search_edit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/dp_12"
-                android:layout_marginRight="@dimen/dp_12"
-                android:inputType="text"
-                android:labelFor="@id/search_edit"
-                android:paddingEnd="@dimen/dp_1"
-                android:paddingLeft="@dimen/dp_26"
-                android:paddingRight="@dimen/dp_1"
-                android:paddingStart="@dimen/dp_26"
-                android:hint="@string/search_tint"
-                android:textColor="@color/title_black"
-                android:textCursorDrawable="@drawable/shape_cursor"
-                android:textSize="@dimen/sp_14" />
-
-        </RelativeLayout>
-    </android.support.v7.widget.Toolbar>
 </android.support.design.widget.AppBarLayout>
