--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     tools:context=".ui.activity.SearchActivity">
 
-    <include layout="@layout/toolbar" />
+    <include layout="@layout/toolbar_search" />
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/search_scroll_view"
@@ -49,9 +49,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
-                    android:drawableLeft="@drawable/ic_clear_all_gone"
                     android:drawablePadding="@dimen/dp_6"
-                    android:drawableStart="@drawable/ic_clear_all_gone"
                     android:text="@string/clear_all"
                     android:textColor="@color/Grey400" />
 
@@ -79,9 +77,9 @@
                 android:visibility="gone" />
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/search_history_rv"
+                android:id="@+id/rv_history_search"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/dp_12"
                 android:background="@color/viewBackground" />
         </LinearLayout>
