--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -74,8 +74,10 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_24"
             android:layout_marginTop="@dimen/dp_24"
+            android:background="@drawable/btn_login_bg"
             android:padding="@dimen/dp_12"
-            android:text="@string/register" />
+            android:text="@string/register"
+            android:textColor="@color/White" />
 
         <TextView
             android:id="@+id/tv_sign_in"
