--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,6 +7,7 @@
     <color name="viewBackground">@color/Grey800</color>
     <color name="windowBackground">@color/Grey900</color>
     <color name="line_divider">@color/Grey700</color>
+    <color name="list_divider">@color/Grey600</color>
 
     <color name="common_color">@color/Grey300</color>
     <color name="item_title">@color/Grey300</color>
@@ -18,6 +19,5 @@
     <color name="vertical_tab_layout_bg">@color/Grey800</color>
     <color name="vertical_tab_layout_indicator_color">@color/Grey600</color>
     <color name="item_flow_layout_bg">@color/Grey700</color>
-
 
 </resources>
